[gd_scene load_steps=6 format=3 uid="uid://bujh4r7bl4qwa"]

[ext_resource type="Script" path="res://ui/activity_details_panel.gd" id="1_su57n"]
[ext_resource type="PackedScene" uid="uid://qheem5a2k11u" path="res://ui/progress_bar.tscn" id="2_rlyxu"]
[ext_resource type="Script" path="res://ui/motivation_for_activity_indicator_label.gd" id="3_rx6o3"]
[ext_resource type="PackedScene" uid="uid://cde3wjgvhjl0p" path="res://ui/need_modifier_hbox.tscn" id="4_hgpwp"]
[ext_resource type="PackedScene" uid="uid://dwkg0r0dey5o0" path="res://ui/need_effect_hbox.tscn" id="5_vefh4"]

[node name="ActivityDetailsPanel" type="BoxContainer"]
custom_minimum_size = Vector2(380, 0)
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_su57n")

[node name="InstructionLabel" type="Label" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 6
theme_type_variation = &"LabelSmall"
text = "Select an activity to see details"

[node name="ActivityDetailsVBox" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 40

[node name="MotvationForActivityVBox" type="VBoxContainer" parent="ActivityDetailsVBox"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MotivationForActivityLabel" type="Label" parent="ActivityDetailsVBox/MotvationForActivityVBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"LabelSmall"
text = "Motivation for Activity"

[node name="MotivationForActivityProgressBar" parent="ActivityDetailsVBox/MotvationForActivityVBox" instance=ExtResource("2_rlyxu")]
layout_mode = 2

[node name="MotivationBreakdownVBox" type="VBoxContainer" parent="ActivityDetailsVBox"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MotivationBreakdownLabel" type="Label" parent="ActivityDetailsVBox/MotivationBreakdownVBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"LabelSmall"
text = "Motivation Breakdown"

[node name="VBoxContainer" type="VBoxContainer" parent="ActivityDetailsVBox/MotivationBreakdownVBox"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="BaseMotivationHBox" type="HBoxContainer" parent="ActivityDetailsVBox/MotivationBreakdownVBox/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MotivationForActivityLabel" type="Label" parent="ActivityDetailsVBox/MotivationBreakdownVBox/VBoxContainer/BaseMotivationHBox"]
layout_mode = 2
size_flags_horizontal = 2
theme_type_variation = &"LabelVerySmall"
text = "Base motivation"
vertical_alignment = 1

[node name="MotivationForActivityIndicatorLabel" type="Label" parent="ActivityDetailsVBox/MotivationBreakdownVBox/VBoxContainer/BaseMotivationHBox"]
self_modulate = Color(0.48, 0.8, 0.48, 1)
layout_mode = 2
theme_type_variation = &"LabelVerySmallWhite"
text = "VERY HIGH"
vertical_alignment = 1
script = ExtResource("3_rx6o3")

[node name="EffectsFromNeedsVBox" type="VBoxContainer" parent="ActivityDetailsVBox/MotivationBreakdownVBox/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="EffectsFromNeedsLabel" type="Label" parent="ActivityDetailsVBox/MotivationBreakdownVBox/VBoxContainer/EffectsFromNeedsVBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"LabelSmaller"
text = "Effects from satisfaction of needs"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NeedModifierHBox" parent="ActivityDetailsVBox/MotivationBreakdownVBox/VBoxContainer/EffectsFromNeedsVBox" instance=ExtResource("4_hgpwp")]
layout_mode = 2

[node name="NeedModifierHBox2" parent="ActivityDetailsVBox/MotivationBreakdownVBox/VBoxContainer/EffectsFromNeedsVBox" instance=ExtResource("4_hgpwp")]
layout_mode = 2
need = 1

[node name="NeedModifierHBox3" parent="ActivityDetailsVBox/MotivationBreakdownVBox/VBoxContainer/EffectsFromNeedsVBox" instance=ExtResource("4_hgpwp")]
layout_mode = 2
need = 2

[node name="NeedModifierHBox4" parent="ActivityDetailsVBox/MotivationBreakdownVBox/VBoxContainer/EffectsFromNeedsVBox" instance=ExtResource("4_hgpwp")]
layout_mode = 2
need = 3

[node name="NeedModifierHBox5" parent="ActivityDetailsVBox/MotivationBreakdownVBox/VBoxContainer/EffectsFromNeedsVBox" instance=ExtResource("4_hgpwp")]
layout_mode = 2
need = 4

[node name="NeedModifierHBox6" parent="ActivityDetailsVBox/MotivationBreakdownVBox/VBoxContainer/EffectsFromNeedsVBox" instance=ExtResource("4_hgpwp")]
layout_mode = 2
need = 5

[node name="EffectsOfActivityVBox" type="VBoxContainer" parent="ActivityDetailsVBox"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="EffectsOfActivityLabel2" type="Label" parent="ActivityDetailsVBox/EffectsOfActivityVBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"LabelSmall"
text = "Effects of Activity"

[node name="VBoxContainer" type="VBoxContainer" parent="ActivityDetailsVBox/EffectsOfActivityVBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="ActivityDetailsVBox/EffectsOfActivityVBox/VBoxContainer"]
layout_mode = 2

[node name="NeedEffectHBox" parent="ActivityDetailsVBox/EffectsOfActivityVBox/VBoxContainer/HBoxContainer" instance=ExtResource("5_vefh4")]
layout_mode = 2

[node name="NeedEffectHBox2" parent="ActivityDetailsVBox/EffectsOfActivityVBox/VBoxContainer/HBoxContainer" instance=ExtResource("5_vefh4")]
layout_mode = 2
need = 1

[node name="NeedEffectHBox3" parent="ActivityDetailsVBox/EffectsOfActivityVBox/VBoxContainer/HBoxContainer" instance=ExtResource("5_vefh4")]
layout_mode = 2
size_flags_horizontal = 0
need = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="ActivityDetailsVBox/EffectsOfActivityVBox/VBoxContainer"]
layout_mode = 2

[node name="NeedEffectHBox" parent="ActivityDetailsVBox/EffectsOfActivityVBox/VBoxContainer/HBoxContainer2" instance=ExtResource("5_vefh4")]
layout_mode = 2
need = 3

[node name="NeedEffectHBox2" parent="ActivityDetailsVBox/EffectsOfActivityVBox/VBoxContainer/HBoxContainer2" instance=ExtResource("5_vefh4")]
layout_mode = 2
need = 4

[node name="NeedEffectHBox3" parent="ActivityDetailsVBox/EffectsOfActivityVBox/VBoxContainer/HBoxContainer2" instance=ExtResource("5_vefh4")]
layout_mode = 2
size_flags_horizontal = 0
need = 5
